--- a/ERPSYSTEM-GUI/ERPSYSTEM-GUI.csproj
+++ b/ERPSYSTEM-GUI/ERPSYSTEM-GUI.csproj
@@ -8,4 +8,14 @@
         <UseWPF>true</UseWPF>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MahApps.Metro.IconPacks.Material" Version="4.11.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Model\" />
+      <Folder Include="ViewModel\" />
+      <Folder Include="VIew\UserControls\" />
+    </ItemGroup>
+
 </Project>
